styles for regular view complete

--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -4,9 +4,31 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  max-width: 100%;
 }
 
 .grid__item {
-  border: 0.25rem solid $c-blue;
+  flex: 0 0 25%;
+  flex-direction: row;
+  max-width: 50%;
+  margin: 1rem;
+  border: 0.15rem solid $c-blue;
+
+  .shop-card__info {
+    text-align: center;
+  }
+
+  img {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 1rem;
+
+  }
 
 }
+
+.shop-card {
+  display: flex;
+  flex-direction: column;
+  }
