--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -8,27 +8,28 @@
 }
 
 .grid__item {
-  flex: 0 0 25%;
-  flex-direction: row;
-  max-width: 50%;
+  flex-basis: calc(100% / 3 - 2rem);
+  flex-grow: 1;
+  // max-width: 50%;
   margin: 1rem;
   border: 0.15rem solid $c-blue;
-
-  .shop-card__info {
-    text-align: center;
-  }
-
-  img {
-    display: block;
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 1rem;
-
-  }
+  background: $c-pink;
 
 }
 
 .shop-card {
   display: flex;
   flex-direction: column;
+
+  &__pic {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 1rem;
+    align-self: center;
   }
+
+  &__info {
+    text-align: center;
+  }
+}
