--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -28,11 +28,27 @@
   }
 
   .dropdown {
+
     &__list {
-      left: auto;
       right: 100%;
       bottom: 50%;
+      left: auto;
       flex-direction: row;
+
+      transform: translate(0, 50%);
+
+      &__button {
+        border: 0;
+
+
+      }
+
+      > * + * {
+        border-top: 0;
+        border-left: 0.15rem solid $c-blue;
+      }
+
+
 
     }
   }
@@ -43,12 +59,17 @@
     flex-direction: column;
     flex-grow: 1;
     height: 100%;
-    border: 0;
-    //border-right:  0.15rem solid $c-blue;
-    //border-left: 0.15rem solid $c-blue;
+    border-top: 0;
+    border-left: 0.15rem solid $c-blue;
+
 
     > * + * {
+      border-top: 0.15rem solid $c-blue;
       border-left: 0;
     }
+
+
+
+
 }
 }
