--- a/styles/app.scss
+++ b/styles/app.scss
@@ -11,7 +11,9 @@ $c-yellow: #e5b178;
 @import 'box-sizing';
 @import 'grid';
 
-img
+img {
+  align-self: center;
+}
 
 * {
   margin: 0;
@@ -37,7 +39,11 @@ ul {
 .button-bar {
   display: flex;
   height: 2rem;
-  background: $c-yellow;
+  border-top: 0.15rem solid $c-blue;
+
+  > * + * {
+    border-left: 0.15rem solid $c-blue;
+  }
 
   &__button {
     flex-grow: 1;
